--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "laravel-admin-ext/log-viewer",
+    "name": "bstd-laravel-admin-ext/log-viewer",
     "description": "Log viewer for laravel",
     "type": "library",
     "keywords": ["laravel-admin", "log", "viewer"],
-    "homepage": "https://github.com/laravel-admin-extensions/log-viewer",
+    "homepage": "https://github.com/BSTD-ru/laravel-admin-log-viewer",
     "license": "MIT",
     "authors": [
         {
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "encore/laravel-admin": "~1.6"
+        "bstd/laravel-admin": "~1.6"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0"
@@ -23,6 +23,12 @@
             "Encore\\Admin\\LogViewer\\": "src/"
         }
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/BSTD-ru/laravel-admin.git"
+        }
+    ],
     "extra": {
         "laravel": {
             "providers": [
