--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "bstd/laravel-admin": "~1.6"
+        "encore/laravel-admin": "~1.6"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0"
@@ -23,12 +23,6 @@
             "Encore\\Admin\\LogViewer\\": "src/"
         }
     },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/BSTD-ru/laravel-admin.git"
-        }
-    ],
     "extra": {
         "laravel": {
             "providers": [
